--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -35,10 +35,10 @@ diaspora_yml:
       url: "http://localhost/"
       certificate_authorities: '/etc/ssl/certs/ca-certificates.crt'
       # Whether to install SSL certs and force https redirect from http
-      require_ssl: true
+      require_ssl: false
       sidekiq:
         ## NOTE! Namespaces are being removed in diaspora* 0.6 - use 'redis' to specify an url instead
-        namespace: diaspora
+#        namespace: diaspora
         concurrency: 2
         backtrace: false
     server:
