--- a/tasks/assets.yaml
+++ b/tasks/assets.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Precompile assets
-  script: shell_wrapper.sh bin/rake assets:precompile
+  script: shell_wrapper.sh rake assets:precompile
   become: yes
   become_user: "{{ os_user }}"
   when: skip_precompile is not defined
